Rework Liferay Workspace to target Liferay 7.1.3-ga4 and Java 1.8